src/objects/Sugar_Note__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <externalId>true</externalId>
        <label>Call ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contacts ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Leads_ID2__c</fullName>
        <label>Leads ID2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_ID3__c</fullName>
        <label>Leads ID3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_ID__c</fullName>
        <externalId>true</externalId>
        <label>Leads ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meetings_ID__c</fullName>
        <label>Meetings ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <label>Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <externalId>true</externalId>
        <label>Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Type__c</fullName>
        <label>Parent Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Line_ID__c</fullName>
        <externalId>true</externalId>
        <label>Revenue Line ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Note_ID__c</fullName>
        <label>SFDC Note ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sugar_Created_Date__c</fullName>
        <label>Sugar Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sugar_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Sugar Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sugar Note</label>
    <nameField>
        <label>Sugar Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sugar Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>